--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Tanmoy\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1891806431.properties
+deploy.ant.properties.file=C:\\Users\\TUHIN\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-930925616.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Tanmoy/personal_domain
-j2ee.server.home=C:/Program Files/Java/glassfish4/glassfish
-j2ee.server.instance=[C:\\Program Files\\Java\\glassfish4\\glassfish;C:\\Users\\Tanmoy\\personal_domain]deployer:gfv3ee6wc:localhost:15700
-j2ee.server.middleware=C:/Program Files/Java/glassfish4
-user.properties.file=C:\\Users\\Tanmoy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+j2ee.server.domain=C:/Users/TUHIN/personal_domain
+j2ee.server.home=C:/Program Files/glassfish4/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish4\\glassfish;C:\\Users\\TUHIN\\personal_domain]deployer:gfv3ee6wc:localhost:36515
+j2ee.server.middleware=C:/Program Files/glassfish4
+user.properties.file=C:\\Users\\TUHIN\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
